fix: ui: Map overflow

--- a/app/style/high-tech-surveillance/style.sass
+++ b/app/style/high-tech-surveillance/style.sass
@@ -188,7 +188,7 @@ header
 
 .business-location
   background-color: $hilight-red
-  width: 1100px
+  max-width: 1100px
   margin: 0 auto 30px auto
   padding: 48px 50px 29px 50px
 
